--- a/app/views/municipalities/map.html.erb
+++ b/app/views/municipalities/map.html.erb
@@ -1,9 +1,10 @@
+
 <div id="map"></div>
 
 <script type="text/javascript">
 
 handler = Gmaps.build('Google', { 
-	//builders: { Marker: InfoBoxBuilder},
+	builders: { Marker: InfoBoxBuilder},
 	markers:
     {clusterer: {
       gridSize: 40,
@@ -38,10 +39,25 @@ handler = Gmaps.build('Google', {
   	}
   }
 });
+
 handler.buildMap({ provider: {}, internal: {id: 'map'}}, function(){
     markers = handler.addMarkers(<%=raw @markers.to_json %>);
     handler.bounds.extendWith(markers);
     handler.fitMapToBounds();
+
+    for (var i=0;i < markers.length; i++){
+	    var marker = markers[i];
+	    google.maps.event.addListener(
+	    	markers[i].getServiceObject(), 
+	    	"click", 
+	    	function(event) {
+	    		$.get("/municipalities/" + this.title + "/infobox", function( data ) {
+					  $("div.infobox1").html( data );
+					});
+	    	}
+	    );
+	  }
+
 });
 
 </script>
@@ -63,4 +79,23 @@ handler.buildMap({ provider: {}, internal: {id: 'map'}}, function(){
 	#map label { 
 	  width: auto; display:inline; 
 	} 
+
+	.infobox1 {
+      border:1px solid #d5d5d5;
+      margin-top: 8px;
+      background:#fefefe;
+      font-family:Arial, Helvetica, sans-serif;
+      font-size:12px;
+      padding: 1em;
+      -webkit-border-radius: 3px;
+      -moz-border-radius: 3px;
+      border-radius: 3px;
+      -webkit-box-shadow: 0 0  5px #acacac;
+      box-shadow: 0 0 5px #acacac;
+  }
+
+  .infoBox img{
+  	margin-top: 10px !important; 
+		margin-right: 2px !important;
+  }
 </style>
