--- a/app/views/fractions/_index.html.erb
+++ b/app/views/fractions/_index.html.erb
@@ -1,5 +1,5 @@
 <legend>Fractions (<%= @fractions.size.to_s %>)</legend>
-<%= link_to 'New Province', new_municipality_fraction_path(@municipality), 
+<%= link_to 'New Fraction', new_municipality_fraction_path(@municipality), 
   :class => "btn btn-success" if current_user %>
 <% if !@fractions.empty? %>
 
