--- a/app/views/provinces/show.html.erb
+++ b/app/views/provinces/show.html.erb
@@ -5,7 +5,7 @@
 <div class="row-fluid">
 <div class="span6">
 <center>
-  <td><%= image_tag(@province.symbol.photo.url(:medium)) %></td>
+  <td><%= image_tag(@province.symbol.photo.url) %></td>
   <h2><%= @province.name %></h2>
 </center>
 </div>
