--- a/app/views/regions/show.html.erb
+++ b/app/views/regions/show.html.erb
@@ -5,7 +5,7 @@
 <div class="row-fluid">
   <div class="span6">
   <center>
-    <td><%= image_tag(@region.symbol.photo.url(:medium)) %></td>
+    <td><%= image_tag(@region.symbol.photo.url) %></td>
     <h2><%= @region.name %></h2>
   </center>
   </div>
