fixed picture integretion to dropbox, and improved search

--- a/app/views/regions/index.html.erb
+++ b/app/views/regions/index.html.erb
@@ -3,7 +3,7 @@
 <hr/>
 <%= link_to 'New Region', new_region_path, 
     :class => "btn btn-success" if current_user %>
-<%= alphabetical_paginate @alphaParams %>
+<%#= alphabetical_paginate @alphaParams %>
 <div id="pagination_table">
 <table class="table table-hover table-striped">
   <tr>
